@@ -511,10 +511,13 @@ List of macros used for checking MPFR:
 + HAVE_GETTIMEOFDAY:    Define if the function gettimeofday() is available.
 + HAVE_SETLOCALE:       Define if the function setlocale() is available.
 + MPFR_ERRDIVZERO:      Define if the floating-point division by 0 fails
-                        (e.g. because a SIGFPE signal is generated, or
-                        because it is regarded as undefined behavior by
-                        a sanitizer). This disables the tests involving
-                        such operations.
+                        in the MPFR library (e.g., because a SIGFPE signal
+                        is generated, or because it is regarded as undefined
+                        behavior by a sanitizer). This disables the tests
+                        involving such operations.
+                        Note: Tests related to NaN and infinities must not
+                        rely on native FP division by 0, whether this macro
+                        is defined or not.
 + MPFR_TESTS_FPE_DIV:   Define to check whether there has been a FP
                         exception FE_DIVBYZERO or FE_INVALID, which
                         probably comes from 1.0 / 0.0 or 0.0 / 0.0 to
