@@ -147,12 +147,12 @@ check-gmp-symbols: $(LTLIBRARIES)
 # For instance, with r11968, and
 #   ./configure --with-gmp-build=... CC=tcc
 # the symbol __gmpn_clz_tab is defined, which is wrong.
-# Note: the "grep -v '@plt$$'" below is for tcc.
+# Note: the "$(GREP) -v '@plt$$'" below is for tcc.
 check-exported-symbols: $(LTLIBRARIES)
 	if [ -f "$(LIBMPFRSO)" ]; then \
 	  gsymbols=`$(NM) -gP "$(LIBMPFRSO)" | perl -ne \
 	    '/^(__gmp[a-z]?_[_0-9A-Za-z]*) +[A-TV-Z]/ and print " $$1"' | \
-	    { grep -v '@plt$$' || true ; }`; \
+	    { $(GREP) -v '@plt$$' || true ; }`; \
 	  if [ -n "$$gsymbols" ]; then \
 	    echo "MPFR defines symbols with a GMP reserved prefix:$$gsymbols"; \
 	    exit 1; \
