@@ -25,6 +25,7 @@ Changes from versions 4.0.* to version 4.1.0:
 - New --enable-formally-proven code configure option, to use (when available)
   formally proven code.
 - Improved __GMP_CC and __GMP_CFLAGS retrieval (in particular for MS Windows).
+- Option -pedantic is now always removed from __GMP_CFLAGS (see INSTALL).
 - Changed __float128 to the type _Float128 specified in ISO/IEC TS 18661.
   __float128 is used as a fallback if _Float128 is not supported.
   FIXME: To be confirmed before the release.
